--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Tournament
+server.port=8081
 # Datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/Tournament
 spring.datasource.username=devUser
